# rlxos

./: .clang-format  .config  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .profile  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Config.in  ELEMENT.md  FAQ.md  GNUmakefile.in  HISTORY.md  Makefile  README.md  RELEASE_MODEL.md  SECURITY.md  SUMMARY.md  SUPPORT.md  TODO  TODO.ELEMENTS  book.toml  boot.sh  bootstrap  bootstrap.py  build.sh  buildstream.conf  busybox.conf  busybox.defconfig  channel.yml  check-missing.py  clean.sh  config-aarch64.yml  config-x86_64.yml  config.inc  config.mk  config.yml  (+20 more)
.forgejo/workflows/: check.yml  pr_branch_check.yml  release.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ignite-failed--.md
_external/limine/: .gitignore  3RDPARTY.md  CONFIG.md  ChangeLog  INSTALL.md  USAGE.md  configure.ac  test.mk
_external/limine/.forgejo/workflows/: binary-release.yml  qa.yml
_external/limine/common/: common.mk  entry.s3.c  linker_bios.ld.in  linker_uefi_aarch64.ld.in  linker_uefi_ia32.ld.in  linker_uefi_x86_64.ld.in  menu.c  stb_image.patch
_external/limine/common/drivers/: vga_textmode.h
_external/limine/common/lib/: acpi.h  config.h  elf.c  gterm.c  guid.c  guid.h  misc.c  spinup.asm_loongarch64  term.c  term.h  uri.c
_external/limine/common/mm/: vmm.c
_external/limine/common/protos/: limine_asm.asm_ia32  multiboot2.c
_external/limine/common/pxe/: tftp.s2.c
_external/limine/common/sys/: cpu.h  idt.c  smp.h
_external/limine/host/: limine.c
_external/limine/test/: limine.conf  linker.ld
assets/pam/: login  (+3 more)
cmake/: FindOSTree.cmake  GLibUtils.cmake
cmd/: rlxos.mk
common/: entry.s2.c  linker_uefi_loongarch64.ld.in  linker_uefi_riscv64.ld.in
config/: busybox.conf  busybox.config  rlxos.mk  users.conf
container/: Dockerfile
data/: rlxos.mk
decompressor/: decompressor.mk
distrib/: rlxos.mk
docker/: Dockerfile.toolchain  docker-compose.yml
docs/: 001_Installation.md  HISTORY.md  Installation.md  README.md  RELEASE_MODEL.md  SECURITY.md  SUMMARY.md  book.json  conf.py  first-boot.md  index.rst  ostree.md  welcome-tour.md  welcome.md
elements/: app-market.yml  bootstrap.yml  core.yml  freedesktop-sdk.bst  platform.yml  preinstalled-apps.yml  runtime.yml
files/: artifact-server.service  autologin.conf  avyos.gpg  certdata.txt  cross-compilation.cmake  dialogrc  fstab  genfstab.preset  genfstab.service.in  genfstab.sh.in  group  halt.sh  installer.desktop  kernel.config  nsswitch.conf  openrc.logrotate  pkgupd.yml  poweroff.sh  reboot.sh  rlxos.gpg  supported_locales  useradd  zram-generator.conf
include/: aliases.yml  artifacts.yml  build-tools.yml  compiler.yml  environ.yml  environment.yml  options.yml  overrides.yml  plugins.yml  shell.yml  split-rules.yml  strip.yml  variables.yml
kernel/: kernel.go  link.ld
plugins/: cargo-lock.py  collect_initial_scripts.py  go-vendor.py  ostree.py  ostree.yaml
profiles/: desktop  server
recipes/: accountsservice.yml  acl.yml  amtk.yml  android-tools.yml  android-udev.yml  appimage.yml  appimagetool.yml  appstream-glib.yml  apr.yml  at-spi2-core.yml  atk.yml  atkmm.yml  attr.yml  autoconf-2.13.yml  automake.yml  awesome.yml  binutils.yml  blueman.yml  boost.yml  btrfs-progs.yml  bzip2.yml  ca-certificates.yml  cairo.yml  cairomm.yml  cmake.yml  codium.yml  colord-gtk.yml  colord.yml  conky.yml  containerd.yml  core.yml  coreutils.yml  cpio.yml  cracklib.yml  cups.yml  curl.yml  cutefish-core.yml  dbus-cxx.yml  dbus-glib.yml  dconf.yml  (+408 more)
scripts/: bootstrap.sh  check-missing.py  check-update.sh  check-updates.sh  checkup-broken-links.sh  checkup.sh  chroot.sh  clean-target.sh  cleanup.sh  commit-ostree.sh  common.py  common.sh  compile-all.sh  compile.sh  config.sh  configure.py  container.sh  create-container.sh  depof.sh  discord.sh  docker.sh  exec.sh  extract-icons.sh  findfile.sh  generate-iso.sh  inside-container.sh  inside-docker.sh  iso.sh  mkbootimg  pkgupd-build.sh  pkgupd-generate-meta.sh  prepare-desktop-plasma.sh  qemu.sh  refresh-meta.sh  report-cve.py  report-outdated.py  repository-checkup.sh  repository-cleanup.sh  rev-sync.sh  run-iso-vnc.sh  (+8 more)
services/: rlxos.mk
src/: CMakeLists.txt
src/ignite/: ArchiveManager.cpp  ArchiveManager.h  Builder.cpp  Builder.h  CMakeLists.txt  Container.cpp  Container.h  Executor.cpp  Executor.h  Ignite.cpp  Ignite.h  MetaInfo.cpp  MetaInfo.h  Resolver.h  main.cpp
src/srclang/: CMakeLists.txt  main.cpp
src/srclang/ByteCode/: ByteCode.cxx  ByteCode.hxx  DebugInfo.hxx  Instructions.cxx  Instructions.hxx
src/srclang/Compiler/: Compiler.cxx  Compiler.hxx
src/srclang/Compiler/SymbolTable/: SymbolTable.cxx  SymbolTable.hxx
src/srclang/Interpreter/: Interpreter.cxx  Interpreter.hxx
src/srclang/Interpreter/Builtins/: Builtin.cxx  Builtin.hxx
src/srclang/Interpreter/MemoryManager/: MemoryManager.cxx  MemoryManager.hxx
src/srclang/Language/: Language.cxx  Language.hxx  Options.cxx  Options.hxx
src/srclang/Value/: Function.cxx  Function.hxx  Value.cxx  Value.hxx
src/sysroot/: CMakeLists.txt  Deployment.cpp  Deployment.h  Error.h  Sysroot.cpp  Sysroot.h  main.cpp
src/welcome-tour/: Application.cpp  Application.h  CMakeLists.txt  Window.cpp  Window.h  Window.ui  gresource.xml  main.cpp
system/: CMakeLists.txt
system/services/compositor/: CMakeLists.txt  main.c  main.cpp
test/: e9print.c  limine.c  test.mk
tests/: run-test.py
theme/: pagetoc.css  pagetoc.js
tools/: CMakeLists.txt  checkup.sh  compiler.yml  environ.yml  genimage.sh  mkinitramfs.sh  strip.yml  toolchain.mk  variables.yml
tools/ignite/: CMakeLists.txt  Configuration.cpp  Configuration.h  Configuration.ixx  Container.h  Container.ixx  Executor.h  Executor.ixx  Ignite.cpp  Ignite.ixx  Recipe.cpp  Recipe.h  Recipe.ixx  aliases.go  device.go  external.go  main.cpp  main.cxx  main.go  picosha2.h  rootfs.go  toolchain.go
tools/ignite/ensure/: def.go  file.go  run.go
tools/ignite/scripts/: genimage.sh  mkinitramfs.sh  mksquashfs.sh
tools/ignite/skeleton/etc/: group  passwd
utils/: commit-ostree.sh
(+5309 files in other folders)
