cmake_minimum_required(VERSION 3.20)

project(ignite
        VERSION "1.0"
        DESCRIPTION "Build tool for rlxos"
        LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${PROJECT_NAME}
        main.cpp
        Ignite.cpp Ignite.h
        Container.cpp Container.h
        Configuration.cpp Configuration.h
        Recipe.cpp Recipe.h
        Executor.cpp Executor.h)

target_link_libraries(${PROJECT_NAME} PRIVATE
        yaml-cpp)